@@ -50,3 +50,5 @@ Version 3 beta
   DN - added .uniq to distinctly list village names
 2014-12-05
   PB - Ensured that TA is also used when searching for villages whether they are in anc connect pilot or not
+2014-12-11
+  PB - Added extra logging details to TextIt integration file
